[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "mypy>=1.19.0",
 "ruff>=0.14.7",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["utils"]
